--- a/_project/css/main.css
+++ b/_project/css/main.css
@@ -400,6 +400,8 @@ input[type=submit]:hover{
 
 /* shopping cart */
 
+
+
 .one_item{
 	margin: 1rem 0;
 	height:auto;
@@ -439,6 +441,13 @@ input[type=submit]:hover{
 .make_payment  input[type=submit]:hover{
 	background-color: rgba(171,152,131,1);
 }
+
+.make_payment .bill  input {
+	width: 100%;
+	text-align: right;
+}
+
+
 
 
 
